fix modal on mobile

--- a/web/wp-content/themes/lfevents/src/scss/blocks/_people.scss
+++ b/web/wp-content/themes/lfevents/src/scss/blocks/_people.scss
@@ -248,8 +248,8 @@
 			transition: all 0.25s ease-out;
 		}
 		.person__image img {
-			height: unset;
-			max-width: 400px;
+			height: 280px;
+			width: 280px;
 		}
 
 		.person__social {
